--- a/arsolution.openhab/ARSolution.OpenHAB.Model/ARSolution.OpenHAB.Model.csproj
+++ b/arsolution.openhab/ARSolution.OpenHAB.Model/ARSolution.OpenHAB.Model.csproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Authors>Aiko Radlingmayr</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>openhab rest net5</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageProjectUrl>https://github.com/radaiko/arsolution.openhab</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/radaiko/arsolution.openhab</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
