--- a/arsolution.openhab/ARSolution.OpenHAB.Rest/ARSolution.OpenHAB.Rest.csproj
+++ b/arsolution.openhab/ARSolution.OpenHAB.Rest/ARSolution.OpenHAB.Rest.csproj
@@ -9,7 +9,9 @@
     <AssemblyVersion>0.0.1.0</AssemblyVersion>
     <FileVersion>0.0.1.0</FileVersion>
     <PackageTags>openhab rest net5</PackageTags>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
+    <PackageProjectUrl>https://github.com/radaiko/arsolution.openhab</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/radaiko/arsolution.openhab</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
